<resources>
    <string name="app_name">One Move</string>
    <string name="welcome_title" translatable="false">The Currency App</string>
    <string name="welcome_subtitle" translatable="false">Powered by Libra and One Identity</string>
    <string name="welcome_button_1" translatable="false">Get Started</string>
    <string name="param_first_name">param_first_name</string>
    <string name="param_last_name">param_last_name</string>
    <string name="param_email">param_email</string>
    <string name="param_contact">param_contact</string>
    <string name="param_password">param_password</string>
    <string name="param_libra_wallet_address">param_libra_wallet_address</string>
    <string name="param_libra_balance">param_libra_balance</string>
    <string name="param_libra_mnemonic">param_libra_mnemonic</string>
    <string name="param_oneid_token">param_oneid_token</string>
    <string name="param_oneid_credential">param_oneid_credential</string>
    <string name="param_oneid_selfie">param_oneid_selfie</string>
    <string name="param_oneid_endpoint_did">param_oneid_endpoint_did</string>
    <string name="param_oneid_created_at">param_oneid_created_at</string>
    <string name="param_oneid_wallet_name">param_oneid_wallet_name</string>
    <string name="param_oneid_wallet_address">param_oneid_wallet_address</string>
    <string name="param_oneid_gender">param_oneid_gender</string>
    <string name="param_oneid_dob">param_oneid_dob</string>
    <string name="param_oneid_nationality">param_oneid_nationality</string>
    <string name="param_oneid_nationality_id">param_oneid_nationality_id</string>
    <string name="param_oneid_company_name">param_oneid_company_name</string>
    <string name="param_oneid_job_title">param_oneid_job_title</string>
    <string name="param_oneid_id_type">param_oneid_id_type</string>
    <string name="param_oneid_id_type_name">param_oneid_id_type_name</string>
    <string name="param_oneid_id_no">param_oneid_id_no</string>
    <string name="param_oneid_id_image">param_oneid_id_image</string>
    <string name="param_oneid_address_image">param_oneid_address_image</string>
    <string name="param_utility_user_id">param_utility_user_id</string>
    <string name="param_last_transferred_date">param_last_transferred_date</string>
    <string name="param_last_transferred_amount">param_last_transferred_amount</string>
    <string name="choose_id_type">Choose your id type</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="is_free">It\'s free</string>
    <string name="almost_done">Almost done</string>
    <string name="your_full_name">Your full name</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="legal_name_message">Please input your full legal name as shown on your passport or driving license</string>
    <string name="password_message">Your password should be at least 8 characters, and include 1 upper case letter, 1 lower case letter and 1 number.</string>
    <string name="proof_of_address_message">Take a clear and legible picture of a recent utility bill displaying your adddress (electricity, phone, water)</string>
    <string name="continue_text">Continue</string>
    <string name="your_login_details">Your login details</string>
    <string name="got_referral_code">Got a referral code?</string>
    <string name="current_balance">Current balance</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="send_money_to">Send money to</string>
    <string name="send_payment">Send Payment</string>
    <string name="recent">Recent</string>
    <string name="overview">Overview</string>
    <string name="transactions">Transactions</string>
    <string name="pay">Pay</string>
    <string name="add_new">Add new</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="view_all">View all</string>
    <string name="view_wallet_address">Tap to View Wallet Address</string>
    <string name="this_month">This month</string>
    <string name="payment_request">Payment Request</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="verification_result">Verification Result</string>
    <string name="copy_address">Copy Address</string>
    <string name="wallet_address_copied">Wallet address copied</string>
    <string name="expense">Expense</string>
    <string name="transactions_id">Transaction ID</string>
    <string name="transactions_made_at">Transaction made at</string>
    <string name="search">Search</string>
    <string name="search_contact">Search Contact</string>
    <string name="charge">Charge</string>
    <string name="balance">Balance</string>
    <string name="speed">Speed</string>
    <string name="fee">Fee</string>
    <string name="total">Total</string>
    <string name="instant">~instant</string>
    <string name="to">To</string>
    <string name="comment">Comment</string>
    <string name="what_it_for">What\'s it for</string>
    <string name="complete_your_registration">Complete your registration</string>
    <string name="complete_your_registration_message">Let\'s get you registered so you can send money safely and securely</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="nationality">Nationality</string>
    <string name="id_no">ID Number</string>
    <string name="company_name">Company Name</string>
    <string name="id_type">ID Type</string>
    <string name="selfie_message">Selfie image will be automatically captured after you have performed the liveness verification to match with the photo of your passport\n\nPlease ensure you have upload a clear copy of your passport image\n\nDuring the process, we will ask you to perform action to confirm you are real person\n\nThe process will take less than 10 seconds if done correctly. Else you will need to repeat the process</string>
    <string name="passport_id_license_image_message">"Upload a clear and legible picture of your passport / identity card (Malaysia or Indonesia only for the moment) front page</string>
    <string name="account_detail">Your account details are listed below. For security reasons, some of these details are hidden</string>
    <string name="tap_to_upload_photo">Tap here to upload your photo</string>
    <string name="create_identty">Create identity</string>
    <string name="automatic_verification">Automatic Verification</string>
    <string name="success">Success</string>
    <string name="success_identity_credential">Congratulation. You have now obtained your identity credential. You can now connect with other Entity.</string>
    <string name="credential_existed_message">For demo purpose, you can re-perform the verification again.</string>
    <string name="created_on">Verified On</string>
    <string name="facial_similarity">Facial Similarity Match</string>
    <string name="match_result">Result</string>
    <string name="match_score">Score</string>
    <string name="match_image_type">Image Type</string>
    <string name="name_check">Name Check</string>
    <string name="id_no_check">ID No Check</string>
    <string name="id_validity_check">ID Validity Check</string>
    <string name="gender_check">Gender Check</string>
    <string name="nationality_check">Nationality Check</string>
    <string name="dob_check">DOB Check</string>
    <string name="age_check">Age Check</string>
    <string name="sanction_check">Sanction Check</string>
    <string name="sanction_is_sdn">Is SDN</string>
    <string name="sanction_sdn_source">SDN Source</string>
    <string name="sanction_sdn_ref">SDN Ref</string>
    <string name="sanction_search_type">Search Type</string>
    <string name="pep_check">PEP Check</string>
    <string name="pep_is_pep">Is PEP</string>
    <string name="pep_source">PEP Source</string>
    <string name="pep_ref">PEP Ref</string>
    <string name="id_document_check">ID Document Check</string>
    <string name="overall_verification_result">Overall Verification Result</string>
    <string name="fail">Fail</string>
    <string name="error">Error</string>
    <string name="error_missing_automatic_verification">Please complete the automatic verification to obtain a selfie image</string>
    <string name="error_missing_identification_image">Please submit an identification image based on your chosen ID type (Passport, ID or driving license)</string>
    <string name="error_check_box_got_it">You need to check on the checkbox</string>
    <string name="error_invalid_email">Email address not valid</string>
    <string name="error_passport_image_and_selfie_not_match">Passport image doesn\'t match with selfie image. Make sure your are the valid owner of the passport</string>
    <string name="error_passport_image_not_found">Please ensure that you have already uploaded your passport image</string>
    <string name="error_password_length">Password length must be within 8 to 20 characters</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_please_try_again">An error occurred. Please try again.</string>
    <string name="error_required_field">This is a required field</string>
    <string name="error_unable_to_open_camera">Error opening camera</string>
    <string name="error_password_not_strong">Make sure your password contains minimum 8 charc</string>
    <string name="error_recipient_cannot_be_empty">You must have at least one recipient</string>
    <string name="error_amount_cannot_be_zero">Amount cannot be 0</string>
    <string name="error_over_limit_transfer">Amount to be transferred cannot be more than your current balance</string>
    <string name="error_unable_to_add_yourself">Unable to your yourself into list</string>
    <string name="error_recipient_existed">Recipient is already added into the list</string>
    <string name="error_daily_transfer_limit_for_non_verify_account">You have reached your daily trasnfer limit of 50 USD. Please verify your account and receive a digital identity in order to unlock the full feature without limit.</string>
    <string name="error_daily_transfer_limit_for_non_verify_account_leftover">You have reached your daily trasnfer limit of 50 USD. Please verify your account and receive a digital identity in order to unlock the full feature without limit. You can only transfer up to the maximum limit of</string>
    <string name="error_daily_transfer_limit_for_non_verify_account_leftover_2">for today.</string>
    <string name="confirm_add_user">Confirm to add user into your contact?</string>
    <string name="confirm_remove_recipient">Confirm to remove this recipient?</string>
    <string name="confirm_logout">Confirm to logout? This will clear all your data and you might not be able to recover your account for the current stage of our development.</string>
    <string name="success_payment_transfer">Transfer payment successful</string>
    <string name="success_add_user_to_contact">User successfully added into contact</string>
</resources>