<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#F3F5F4"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="20dip"
            android:layout_height="0dip"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="300dip"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="40dip" />

                <TextView
                    android:fontFamily="@font/nbi_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/welcome_title" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dip" />

                <TextView
                    android:fontFamily="@font/nbi_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorLightIndigo"
                    android:text="@string/welcome_subtitle" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="40dip" />

                <Button
                    android:id="@+id/button_get_started"
                    android:fontFamily="@font/nbi_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:minWidth="200dip"
                    android:padding="16dip"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/welcome_button_1"
                    android:background="@drawable/rounded_torquoise"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/welcome_bottom"/>
</LinearLayout>